Alterei o arquivo index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>Exemplo de arquivo</h1>
         <p>Este arquivo foi criado para testar o git</p>
+        <p>adicionei esta linha</p>
     </body>
 </html>
